--- a/test.html
+++ b/test.html
@@ -5,6 +5,10 @@
     <title></title>
     <script src="jquery_lite.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    <script type="text/javascript">
+      Root.$l(function(){console.log(Root.$l('li'))});
+
+    </script>
   </head>
   <body>
     <p>
@@ -24,6 +28,8 @@
       <a href="http://www.myspace.com">Myspace</a><br>
       <a href="http://www.livejournal.com">LiveJournal</a><br>
     </div>
-
+    <script type="text/javascript">
+      console.log("this should appear first")
+    </script>
   </body>
 </html>
